# volleyball-tracker

./: .gitignore  CHANGELOG.md  README.md  go.sum
backend/: .env.example  Makefile  docker-compose.yaml  go.mod  go.sum  main.py  pyproject.toml  requirements.txt  test_migration.py
backend/alembic/: env.py
backend/app/: app.py  auth.py  database.py  main.py  models.py  schemas.py  utils.py
backend/app/core/: auth.py  config.py  database.py
backend/app/models/: models.py  schemas.py
backend/app/routers/: matches.py  players.py  register.py
backend/app/utils/: misc_functions.py
backend/cmd/api/: main.go
backend/docs/: docs.go  swagger.json  swagger.yaml
backend/internal/db/: matches.sql.go  querier.go
backend/internal/handler/: health.go  player.go
backend/internal/service/: match.go  player.go
backend/sql/queries/: matches.sql
frontend/: Home.py  Makefile  app.py  pyproject.toml  requirements.txt
frontend/pages/: 0_Login.py  1_Players.py  2_Matches.py  3_Leaderboard.py
frontend/utils/: api.py  court.py  misc_functions.py
internal/db/: matches.sql.go  models.go  players.sql.go  querier.go
internal/service/: match.go  player.go
sql/migrations/: 00001_init_schema.sql
sql/queries/: matches.sql  players.sql
web/: README.md  pyproject.toml  requirements.txt
web/pages/: 0_Login.py  1_Players.py  2_Matches.py
web/utils/: misc_functions.py
