[project]
name = "backend"
version = "0.1.0"
description = "Backend API for servicing Volleyball Tracker App"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.128.1",
    "fastapi-users[sqlalchemy]>=15.0.3",
    "plotly>=6.5.2",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.40.0",
]
