[project]
name = "backend"
version = "1.1.1"
description = "Backend API for servicing Volleyball Tracker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.1",
    "fastapi-users[sqlalchemy]>=15.0.3",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.40.0",
]
